testsuite/tests/typecheck/should_fail/ExplicitSpecificity3.stderr

ExplicitSpecificity3.hs:5:17: error: parse error on input ‘}’
